--- a/index.html
+++ b/index.html
@@ -6,6 +6,56 @@
     <title>About US</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <div class="navbar">
+          <div class="navbar-logo">Udemy</div>
+          <ul class="navbar-links">
+            <li><a href="#" class="navbar-link">Home</a></li>
+            <li><a href="#" class="navbar-link">Courses</a></li>
+            <li><a href="#" class="navbar-link">Categories</a></li>
+            <li><a href="#" class="navbar-link">Instructors</a></li>
+            <li><a href="#" class="navbar-link">Sign In</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <div class="hero">
+          <div class="overlay"></div>
+          <div class="hero-content">
+            <h1 class="hero-heading">Welcome to iCode Summer</h1>
+            <p class="hero-subheading">Explore and discover amazing things!</p>
+            <a href="#" class="btn">Get Started</a>
+          </div>
+        </div>
+      </section>
+      <section class="widget">
+        <div class="grid-container">
+    <div class="card">
+      <img src="/public/images/profile1.png" alt="Profile 1">
+      <h2 class="card-title">Web Development</h2>
+      <p class="card-profile">by John Doe</p>
+    </div>
+    <div class="card">
+      <img src="/public/images/profile2.png" alt="Profile 2">
+      <h2 class="card-title">Data Science</h2>
+      <p class="card-profile">by Jane Smith</p>
+    </div>
+    <div class="card">
+      <img src="/public/images/profile3.png" alt="Profile 3">
+      <h2 class="card-title">Graphic Design</h2>
+      <p class="card-profile">by Alex Johnson</p>
+    </div>
+     <div class="card">
+      <img src="/public/images/profile2.png" alt="Profile 2">
+      <h2 class="card-title">Data Science</h2>
+      <p class="card-profile">by Jane Smith</p>
+    </div>
+    <!-- Add more cards as needed -->
+      </section>
+    </main>
     using chatGpt, 
     1. create a navbar like Udemy
     2. Create a hero section 
